bug fixes, and more ui changes on mobile.

--- a/styles.css
+++ b/styles.css
@@ -1546,11 +1546,17 @@ iframe {
         gap: 0;
     }
 
+    .message .pfp {
+        margin-top: 5px;
+        width: 35px;
+        height: 35px;
+    }
+
     .message.user .pfp {
         display: none;
     }
 
-    .message-content .username {
+    .message.user .message-content .username {
         display: none;
     }
 
@@ -1559,7 +1565,7 @@ iframe {
     }
     
     .message.user .message-text {
-        border-top-left-radius: 50px;
+        border-top-left-radius: 25px;
         border-bottom-right-radius: 10px;
     }
 
